--- a/Xx4evRockerxX/88875-zero-bathroom-passes-this-semester/rus.textile
+++ b/Xx4evRockerxX/88875-zero-bathroom-passes-this-semester/rus.textile
@@ -1,192 +1,192 @@
-Нулевая в*нная проходит в этом семестре
+РќСѓР»РµРІРѕР№ С‚СѓР°Р»РµС‚ РїСЂРѕС…РѕРґРёС‚ РІ СЌС‚РѕРј СЃРµРјРµСЃС‚СЂРµ
 
-Автор: **
+РђРІС‚РѕСЂ: Xx4evRockerxX
 
 *000*2023-05-10 00:20
 
-«Следующий!» Пожилая женщина-администратор за столом окликнула очередь студентов, пробиравшуюся из кабинета за угол.
+В«РЎР»РµРґСѓСЋС‰РёР№!В» РџРѕР¶РёР»Р°СЏ Р¶РµРЅС‰РёРЅР°-Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂ Р·Р° СЃС‚РѕР»РѕРј РѕРєР»РёРєРЅСѓР»Р° РѕС‡РµСЂРµРґСЊ СЃС‚СѓРґРµРЅС‚РѕРІ, РїСЂРѕР±РёСЂР°РІС€СѓСЋСЃСЏ РёР· РєР°Р±РёРЅРµС‚Р° Р·Р° СѓРіРѕР».
 
-«Фамилия?» — спросила женщина со скучающим видом, когда молодая женщина, Белла, вышла вперёд прямо перед столом, разделяющим их двоих.
+В«Р¤Р°РјРёР»РёСЏ?В» вЂ” СЃРїСЂРѕСЃРёР»Р° Р¶РµРЅС‰РёРЅР° СЃРѕ СЃРєСѓС‡Р°СЋС‰РёРј РІРёРґРѕРј, РєРѕРіРґР° РјРѕР»РѕРґР°СЏ Р¶РµРЅС‰РёРЅР°, Р‘РµР»Р»Р°, РІС‹С€Р»Р° РІРїРµСЂС‘Рґ РїСЂСЏРјРѕ РїРµСЂРµРґ СЃС‚РѕР»РѕРј, СЂР°Р·РґРµР»СЏСЋС‰РёРј РёС… РґРІРѕРёС….
 
-— Перес, — мягко ответила она.
+вЂ” РџРµСЂРµСЃ, вЂ” РјСЏРіРєРѕ РѕС‚РІРµС‚РёР»Р° РѕРЅР°.
 
-«Возраст?»
+В«Р’РѕР·СЂР°СЃС‚?В»
 
-«22».
+В«22В».
 
-«Предпочтительный пол?»
+В«РџСЂРµРґРїРѕС‡С‚РёС‚РµР»СЊРЅС‹Р№ РїРѕР»?В»
 
-«Женщина», — ответила Белла.
+В«Р–РµРЅС‰РёРЅР°В», вЂ” РѕС‚РІРµС‚РёР»Р° Р‘РµР»Р»Р°.
 
-«Хорошо…» Пожилая женщина вздохнула после паузы в допросе.
+В«РҐРѕСЂРѕС€РѕвЂ¦В» РџРѕР¶РёР»Р°СЏ Р¶РµРЅС‰РёРЅР° РІР·РґРѕС…РЅСѓР»Р° РїРѕСЃР»Рµ РїР°СѓР·С‹ РІ РґРѕРїСЂРѕСЃРµ.
 
-«Вот ваше расписание на предстоящий семестр, классы, места, время и т. д.» — сказала она, протягивая через стол несколько сложенных страниц.
+В«Р’РѕС‚ РІР°С€Рµ СЂР°СЃРїРёСЃР°РЅРёРµ РЅР° РїСЂРµРґСЃС‚РѕСЏС‰РёР№ СЃРµРјРµСЃС‚СЂ, РєР»Р°СЃСЃС‹, РјРµСЃС‚Р°, РІСЂРµРјСЏ Рё С‚. Рґ.В» вЂ” СЃРєР°Р·Р°Р»Р° РѕРЅР°, РїСЂРѕС‚СЏРіРёРІР°СЏ С‡РµСЂРµР· СЃС‚РѕР» РЅРµСЃРєРѕР»СЊРєРѕ СЃР»РѕР¶РµРЅРЅС‹С… СЃС‚СЂР°РЅРёС†.
 
-«Это список и описание наших внеклассных клубов и команд в этом году», — продолжила она, протягивая ей ещё несколько страниц.
+В«Р­С‚Рѕ СЃРїРёСЃРѕРє Рё РѕРїРёСЃР°РЅРёРµ РЅР°С€РёС… РІРЅРµРєР»Р°СЃСЃРЅС‹С… РєР»СѓР±РѕРІ Рё РєРѕРјР°РЅРґ РІ СЌС‚РѕРј РіРѕРґСѓВ», вЂ” РїСЂРѕРґРѕР»Р¶РёР»Р° РѕРЅР°, РїСЂРѕС‚СЏРіРёРІР°СЏ РµР№ РµС‰С‘ РЅРµСЃРєРѕР»СЊРєРѕ СЃС‚СЂР°РЅРёС†.
 
-— И вот, — закончила пожилая женщина, — ваше задание на посещение туалета.
+вЂ” Р РІРѕС‚, вЂ” Р·Р°РєРѕРЅС‡РёР»Р° РїРѕР¶РёР»Р°СЏ Р¶РµРЅС‰РёРЅР°, вЂ” РІР°С€Рµ Р·Р°РґР°РЅРёРµ РЅР° РїРѕСЃРµС‰РµРЅРёРµ С‚СѓР°Р»РµС‚Р°.
 
-Белла тут же развернула этот лист бумаги, пропустив большую часть верхней четверти страницы. Пролистнув вниз, она увидела цифру «0», выделенную жирным шрифтом.
+Р‘РµР»Р»Р° С‚СѓС‚ Р¶Рµ СЂР°Р·РІРµСЂРЅСѓР»Р° СЌС‚РѕС‚ Р»РёСЃС‚ Р±СѓРјР°РіРё, РїСЂРѕРїСѓСЃС‚РёРІ Р±РѕР»СЊС€СѓСЋ С‡Р°СЃС‚СЊ РІРµСЂС…РЅРµР№ С‡РµС‚РІРµСЂС‚Рё СЃС‚СЂР°РЅРёС†С‹. РџСЂРѕР»РёСЃС‚РЅСѓРІ РІРЅРёР·, РѕРЅР° СѓРІРёРґРµР»Р° С†РёС„СЂСѓ В«0В», РІС‹РґРµР»РµРЅРЅСѓСЋ Р¶РёСЂРЅС‹Рј С€СЂРёС„С‚РѕРј.
 
-«0?» — спросила Белла про себя, хотя всё ещё вслух.
+В«0?В» вЂ” СЃРїСЂРѕСЃРёР»Р° Р‘РµР»Р»Р° РїСЂРѕ СЃРµР±СЏ, С…РѕС‚СЏ РІСЃС‘ РµС‰С‘ РІСЃР»СѓС….
 
-— Похоже на то, — ответила пожилая женщина, всё ещё скучающая, несмотря на растущую тревогу Беллы.
+вЂ” РџРѕС…РѕР¶Рµ РЅР° С‚Рѕ, вЂ” РѕС‚РІРµС‚РёР»Р° РїРѕР¶РёР»Р°СЏ Р¶РµРЅС‰РёРЅР°, РІСЃС‘ РµС‰С‘ СЃРєСѓС‡Р°СЋС‰Р°СЏ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° СЂР°СЃС‚СѓС‰СѓСЋ С‚СЂРµРІРѕРіСѓ Р‘РµР»Р»С‹.
 
-«Как?» Белла вздрогнула, не веря своим глазам. «Я нахожусь в кампусе все 5 дней в неделю. Я… у меня есть дни, когда я буду здесь ВЕСЬ день. Как я могу… Мне не дали НИ ОДНОГО пропуска в туалет в этом семестре?!?!
+В«РљР°Рє?В» Р‘РµР»Р»Р° РІР·РґСЂРѕРіРЅСѓР»Р°, РЅРµ РІРµСЂСЏ СЃРІРѕРёРј РіР»Р°Р·Р°Рј. В«РЇ РЅР°С…РѕР¶СѓСЃСЊ РІ РєР°РјРїСѓСЃРµ РІСЃРµ 5 РґРЅРµР№ РІ РЅРµРґРµР»СЋ. РЇвЂ¦ Сѓ РјРµРЅСЏ РµСЃС‚СЊ РґРЅРё, РєРѕРіРґР° СЏ Р±СѓРґСѓ Р·РґРµСЃСЊ Р’Р•РЎР¬ РґРµРЅСЊ. РљР°Рє СЏ РјРѕРіСѓвЂ¦ РњРЅРµ РЅРµ РґР°Р»Рё РќР РћР”РќРћР“Рћ РїСЂРѕРїСѓСЃРєР° РІ С‚СѓР°Р»РµС‚ РІ СЌС‚РѕРј СЃРµРјРµСЃС‚СЂРµ?!?!
 
-«Вы хорошо осведомлены о действующей лотерейной политике, мисс Перес», — без промедления ответила женщина за стойкой.
+В«Р’С‹ С…РѕСЂРѕС€Рѕ РѕСЃРІРµРґРѕРјР»РµРЅС‹ Рѕ РґРµР№СЃС‚РІСѓСЋС‰РµР№ Р»РѕС‚РµСЂРµР№РЅРѕР№ РїРѕР»РёС‚РёРєРµ, РјРёСЃСЃ РџРµСЂРµСЃВ», вЂ” Р±РµР· РїСЂРѕРјРµРґР»РµРЅРёСЏ РѕС‚РІРµС‚РёР»Р° Р¶РµРЅС‰РёРЅР° Р·Р° СЃС‚РѕР№РєРѕР№.
 
-Белла выдохнула. «Ты прав. Мне жаль. Это не твоя вина».
+Р‘РµР»Р»Р° РІС‹РґРѕС…РЅСѓР»Р°. В«РўС‹ РїСЂР°РІ. РњРЅРµ Р¶Р°Р»СЊ. Р­С‚Рѕ РЅРµ С‚РІРѕСЏ РІРёРЅР°В».
 
-Она повернулась и медленно вышла из кабинета, позволив следующему студенту занять её место за партой.
+РћРЅР° РїРѕРІРµСЂРЅСѓР»Р°СЃСЊ Рё РјРµРґР»РµРЅРЅРѕ РІС‹С€Р»Р° РёР· РєР°Р±РёРЅРµС‚Р°, РїРѕР·РІРѕР»РёРІ СЃР»РµРґСѓСЋС‰РµРјСѓ СЃС‚СѓРґРµРЅС‚Сѓ Р·Р°РЅСЏС‚СЊ РµС‘ РјРµСЃС‚Рѕ Р·Р° РїР°СЂС‚РѕР№.
 
-Как она могла прожить весь семестр без пропусков в туалет? Ни одного. Как это можно было допустить? Как она вообще переживёт свой первый завтрашний день?
+РљР°Рє РѕРЅР° РјРѕРіР»Р° РїСЂРѕР¶РёС‚СЊ РІРµСЃСЊ СЃРµРјРµСЃС‚СЂ Р±РµР· РїСЂРѕРїСѓСЃРєРѕРІ РІ С‚СѓР°Р»РµС‚? РќРё РѕРґРЅРѕРіРѕ. РљР°Рє СЌС‚Рѕ РјРѕР¶РЅРѕ Р±С‹Р»Рѕ РґРѕРїСѓСЃС‚РёС‚СЊ? РљР°Рє РѕРЅР° РІРѕРѕР±С‰Рµ РїРµСЂРµР¶РёРІС‘С‚ СЃРІРѕР№ РїРµСЂРІС‹Р№ Р·Р°РІС‚СЂР°С€РЅРёР№ РґРµРЅСЊ?
 
 *004*2023-05-11 00:08
 
-«Нет… я не могу», — ругала себя Белла, потянувшись за бутылкой с водой. — Я просто не буду сегодня ничего пить.
+В«РќРµС‚вЂ¦ СЏ РЅРµ РјРѕРіСѓВ», вЂ” СЂСѓРіР°Р»Р° СЃРµР±СЏ Р‘РµР»Р»Р°, РїРѕС‚СЏРЅСѓРІС€РёСЃСЊ Р·Р° Р±СѓС‚С‹Р»РєРѕР№ СЃ РІРѕРґРѕР№. вЂ” РЇ РїСЂРѕСЃС‚Рѕ РЅРµ Р±СѓРґСѓ СЃРµРіРѕРґРЅСЏ РЅРёС‡РµРіРѕ РїРёС‚СЊ.
 
-«Пойдём!» — позвала соседка Беллы по комнате Лиза. «Не пытаться опоздать в наш первый день».
+В«РџРѕР№РґС‘Рј!В» вЂ” РїРѕР·РІР°Р»Р° СЃРѕСЃРµРґРєР° Р‘РµР»Р»С‹ РїРѕ РєРѕРјРЅР°С‚Рµ Р›РёР·Р°. В«РќРµ РїС‹С‚Р°С‚СЊСЃСЏ РѕРїРѕР·РґР°С‚СЊ РІ РЅР°С€ РїРµСЂРІС‹Р№ РґРµРЅСЊВ».
 
-— Готова, — уступила Белла, направляясь к машине.
+вЂ” Р“РѕС‚РѕРІР°, вЂ” СѓСЃС‚СѓРїРёР»Р° Р‘РµР»Р»Р°, РЅР°РїСЂР°РІР»СЏСЏСЃСЊ Рє РјР°С€РёРЅРµ.
 
-— Я имею в виду, у нас достаточно времени, чтобы наполнить твою бутылку водой. — предложила Лиза.
+вЂ” РЇ РёРјРµСЋ РІ РІРёРґСѓ, Сѓ РЅР°СЃ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РІСЂРµРјРµРЅРё, С‡С‚РѕР±С‹ РЅР°РїРѕР»РЅРёС‚СЊ С‚РІРѕСЋ Р±СѓС‚С‹Р»РєСѓ РІРѕРґРѕР№. вЂ” РїСЂРµРґР»РѕР¶РёР»Р° Р›РёР·Р°.
 
-— Не могу, — ответила Белла. «Сегодня я не могу пис*ть в кампусе, поэтому ДОЛЖЕН следить за тем, что пью».
+вЂ” РќРµ РјРѕРіСѓ, вЂ” РѕС‚РІРµС‚РёР»Р° Р‘РµР»Р»Р°. В«РЎРµРіРѕРґРЅСЏ СЏ РЅРµ РјРѕРіСѓ РїРёСЃ*С‚СЊ РІ РєР°РјРїСѓСЃРµ, РїРѕСЌС‚РѕРјСѓ Р”РћР›Р–Р•Рќ СЃР»РµРґРёС‚СЊ Р·Р° С‚РµРј, С‡С‚Рѕ РїСЊСЋВ».
 
-«Ах, чувак, грубо». — предложила Лиза. «Я полностью понимаю, что ты чувствуешь. У меня всего 6 пропусков в туалет в неделю. В основном раз в день. Как мне с этим справиться?»
+В«РђС…, С‡СѓРІР°Рє, РіСЂСѓР±РѕВ». вЂ” РїСЂРµРґР»РѕР¶РёР»Р° Р›РёР·Р°. В«РЇ РїРѕР»РЅРѕСЃС‚СЊСЋ РїРѕРЅРёРјР°СЋ, С‡С‚Рѕ С‚С‹ С‡СѓРІСЃС‚РІСѓРµС€СЊ. РЈ РјРµРЅСЏ РІСЃРµРіРѕ 6 РїСЂРѕРїСѓСЃРєРѕРІ РІ С‚СѓР°Р»РµС‚ РІ РЅРµРґРµР»СЋ. Р’ РѕСЃРЅРѕРІРЅРѕРј СЂР°Р· РІ РґРµРЅСЊ. РљР°Рє РјРЅРµ СЃ СЌС‚РёРј СЃРїСЂР°РІРёС‚СЊСЃСЏ?В»
 
-«Я не могу представить», — ревниво и саркастически сказала Белла.
+В«РЇ РЅРµ РјРѕРіСѓ РїСЂРµРґСЃС‚Р°РІРёС‚СЊВ», вЂ” СЂРµРІРЅРёРІРѕ Рё СЃР°СЂРєР°СЃС‚РёС‡РµСЃРєРё СЃРєР°Р·Р°Р»Р° Р‘РµР»Р»Р°.
 
-————————————————
+вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”вЂ”
 
-«Добро пожаловать в «Историю 342». Меня зовут, как вы, вероятно, видели в своих расписаниях, — доктор Ирэн Ленкс. Айрин в порядке. Я с нетерпением жду нашего совместного путешествия во времени в этом семестре, — начала светловолосая, но уже седеющая профессорша за 40.
+В«Р”РѕР±СЂРѕ РїРѕР¶Р°Р»РѕРІР°С‚СЊ РІ В«РСЃС‚РѕСЂРёСЋ 342В». РњРµРЅСЏ Р·РѕРІСѓС‚, РєР°Рє РІС‹, РІРµСЂРѕСЏС‚РЅРѕ, РІРёРґРµР»Рё РІ СЃРІРѕРёС… СЂР°СЃРїРёСЃР°РЅРёСЏС…, вЂ” РґРѕРєС‚РѕСЂ РСЂСЌРЅ Р›РµРЅРєСЃ. РђР№СЂРёРЅ РІ РїРѕСЂСЏРґРєРµ. РЇ СЃ РЅРµС‚РµСЂРїРµРЅРёРµРј Р¶РґСѓ РЅР°С€РµРіРѕ СЃРѕРІРјРµСЃС‚РЅРѕРіРѕ РїСѓС‚РµС€РµСЃС‚РІРёСЏ РІРѕ РІСЂРµРјРµРЅРё РІ СЌС‚РѕРј СЃРµРјРµСЃС‚СЂРµ, вЂ” РЅР°С‡Р°Р»Р° СЃРІРµС‚Р»РѕРІРѕР»РѕСЃР°СЏ, РЅРѕ СѓР¶Рµ СЃРµРґРµСЋС‰Р°СЏ РїСЂРѕС„РµСЃСЃРѕСЂС€Р° Р·Р° 40.
 
-«Я знаю, что мы встречаемся не в особенно энергичное время дня, сразу после обеда, но я призываю каждого из вас приходить на занятия каждый день, наслаждаясь отдыхом и облегчением обеденного перерыва, когда вы погрузитесь в свои дневные занятия».
+В«РЇ Р·РЅР°СЋ, С‡С‚Рѕ РјС‹ РІСЃС‚СЂРµС‡Р°РµРјСЃСЏ РЅРµ РІ РѕСЃРѕР±РµРЅРЅРѕ СЌРЅРµСЂРіРёС‡РЅРѕРµ РІСЂРµРјСЏ РґРЅСЏ, СЃСЂР°Р·Сѓ РїРѕСЃР»Рµ РѕР±РµРґР°, РЅРѕ СЏ РїСЂРёР·С‹РІР°СЋ РєР°Р¶РґРѕРіРѕ РёР· РІР°СЃ РїСЂРёС…РѕРґРёС‚СЊ РЅР° Р·Р°РЅСЏС‚РёСЏ РєР°Р¶РґС‹Р№ РґРµРЅСЊ, РЅР°СЃР»Р°Р¶РґР°СЏСЃСЊ РѕС‚РґС‹С…РѕРј Рё РѕР±Р»РµРіС‡РµРЅРёРµРј РѕР±РµРґРµРЅРЅРѕРіРѕ РїРµСЂРµСЂС‹РІР°, РєРѕРіРґР° РІС‹ РїРѕРіСЂСѓР·РёС‚РµСЃСЊ РІ СЃРІРѕРё РґРЅРµРІРЅС‹Рµ Р·Р°РЅСЏС‚РёСЏВ».
 
-Белла вздохнула, её нога подпрыгнула под столом. Обед был каким угодно, только не успокаивающим, и облегчение ощущалось через века.
+Р‘РµР»Р»Р° РІР·РґРѕС…РЅСѓР»Р°, РµС‘ РЅРѕРіР° РїРѕРґРїСЂС‹РіРЅСѓР»Р° РїРѕРґ СЃС‚РѕР»РѕРј. РћР±РµРґ Р±С‹Р» РєР°РєРёРј СѓРіРѕРґРЅРѕ, С‚РѕР»СЊРєРѕ РЅРµ СѓСЃРїРѕРєР°РёРІР°СЋС‰РёРј, Рё РѕР±Р»РµРіС‡РµРЅРёРµ РѕС‰СѓС‰Р°Р»РѕСЃСЊ С‡РµСЂРµР· РІРµРєР°.
 
-«Поскольку это курс из 300 уровней, мы глубже погрузимся в глубины неизведанных вод каждой темы», — продолжила Айрин.
+В«РџРѕСЃРєРѕР»СЊРєСѓ СЌС‚Рѕ РєСѓСЂСЃ РёР· 300 СѓСЂРѕРІРЅРµР№, РјС‹ РіР»СѓР±Р¶Рµ РїРѕРіСЂСѓР·РёРјСЃСЏ РІ РіР»СѓР±РёРЅС‹ РЅРµРёР·РІРµРґР°РЅРЅС‹С… РІРѕРґ РєР°Р¶РґРѕР№ С‚РµРјС‹В», вЂ” РїСЂРѕРґРѕР»Р¶РёР»Р° РђР№СЂРёРЅ.
 
-Белла поджала губы. «Пожалуйста, перестаньте ссылаться на воду», — умоляла она себе под нос.
+Р‘РµР»Р»Р° РїРѕРґР¶Р°Р»Р° РіСѓР±С‹. В«РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРµСЂРµСЃС‚Р°РЅСЊС‚Рµ СЃСЃС‹Р»Р°С‚СЊСЃСЏ РЅР° РІРѕРґСѓВ», вЂ” СѓРјРѕР»СЏР»Р° РѕРЅР° СЃРµР±Рµ РїРѕРґ РЅРѕСЃ.
 
-«В начале семестра мы рассмотрим водопроводы, плотины, водохранилища, ирригацию… Все важные методы, которыми наши древние общества управляли водой».
+В«Р’ РЅР°С‡Р°Р»Рµ СЃРµРјРµСЃС‚СЂР° РјС‹ СЂР°СЃСЃРјРѕС‚СЂРёРј РІРѕРґРѕРїСЂРѕРІРѕРґС‹, РїР»РѕС‚РёРЅС‹, РІРѕРґРѕС…СЂР°РЅРёР»РёС‰Р°, РёСЂСЂРёРіР°С†РёСЋвЂ¦ Р’СЃРµ РІР°Р¶РЅС‹Рµ РјРµС‚РѕРґС‹, РєРѕС‚РѕСЂС‹РјРё РЅР°С€Рё РґСЂРµРІРЅРёРµ РѕР±С‰РµСЃС‚РІР° СѓРїСЂР°РІР»СЏР»Рё РІРѕРґРѕР№В».
 
-— Ты, должно быть, шутишь, — прошептала Белла, бесконтрольно подпрыгивая ногой.
+вЂ” РўС‹, РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ, С€СѓС‚РёС€СЊ, вЂ” РїСЂРѕС€РµРїС‚Р°Р»Р° Р‘РµР»Р»Р°, Р±РµСЃРєРѕРЅС‚СЂРѕР»СЊРЅРѕ РїРѕРґРїСЂС‹РіРёРІР°СЏ РЅРѕРіРѕР№.
 
-«Это включает в себя наблюдение за катастрофическими наводнениями…»
+В«Р­С‚Рѕ РІРєР»СЋС‡Р°РµС‚ РІ СЃРµР±СЏ РЅР°Р±Р»СЋРґРµРЅРёРµ Р·Р° РєР°С‚Р°СЃС‚СЂРѕС„РёС‡РµСЃРєРёРјРё РЅР°РІРѕРґРЅРµРЅРёСЏРјРёвЂ¦В»
 
-«Останавливаться».
+В«РћСЃС‚Р°РЅР°РІР»РёРІР°С‚СЊСЃСЏВ».
 
-«… как люди использовали ручьи, впадающие в крупные реки и водные пути…»
+В«вЂ¦ РєР°Рє Р»СЋРґРё РёСЃРїРѕР»СЊР·РѕРІР°Р»Рё СЂСѓС‡СЊРё, РІРїР°РґР°СЋС‰РёРµ РІ РєСЂСѓРїРЅС‹Рµ СЂРµРєРё Рё РІРѕРґРЅС‹Рµ РїСѓС‚РёвЂ¦В»
 
-«О, пожалуйста, остановитесь».
+В«Рћ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РѕСЃС‚Р°РЅРѕРІРёС‚РµСЃСЊВ».
 
-«…и, конечно же, то, как наши ранние цивилизации управляли своими сточными водами», — заключила Айрин.
+В«вЂ¦Рё, РєРѕРЅРµС‡РЅРѕ Р¶Рµ, С‚Рѕ, РєР°Рє РЅР°С€Рё СЂР°РЅРЅРёРµ С†РёРІРёР»РёР·Р°С†РёРё СѓРїСЂР°РІР»СЏР»Рё СЃРІРѕРёРјРё СЃС‚РѕС‡РЅС‹РјРё РІРѕРґР°РјРёВ», вЂ” Р·Р°РєР»СЋС‡РёР»Р° РђР№СЂРёРЅ.
 
-«Это не может быть реальной жизнью». Белла была вне себя.
+В«Р­С‚Рѕ РЅРµ РјРѕР¶РµС‚ Р±С‹С‚СЊ СЂРµР°Р»СЊРЅРѕР№ Р¶РёР·РЅСЊСЋВ». Р‘РµР»Р»Р° Р±С‹Р»Р° РІРЅРµ СЃРµР±СЏ.
 
-«Все писают, и что происходит со всей этой мочой, со всей этой водой имеет значение».
+В«Р’СЃРµ РїРёСЃР°СЋС‚, Рё С‡С‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚ СЃРѕ РІСЃРµР№ СЌС‚РѕР№ РјРѕС‡РѕР№, СЃРѕ РІСЃРµР№ СЌС‚РѕР№ РІРѕРґРѕР№ РёРјРµРµС‚ Р·РЅР°С‡РµРЅРёРµВ».
 
 *006*2023-05-14 23:54
 
-«Белла!» Она услышала, как её имя окликнули из холла после того, как История была отклонена.
+В«Р‘РµР»Р»Р°!В» РћРЅР° СѓСЃР»С‹С€Р°Р»Р°, РєР°Рє РµС‘ РёРјСЏ РѕРєР»РёРєРЅСѓР»Рё РёР· С…РѕР»Р»Р° РїРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РСЃС‚РѕСЂРёСЏ Р±С‹Р»Р° РѕС‚РєР»РѕРЅРµРЅР°.
 
-— Лиза? — спросила Белла, сбитая с толку. — Я думал, ты сейчас на физкультуре?
+вЂ” Р›РёР·Р°? вЂ” СЃРїСЂРѕСЃРёР»Р° Р‘РµР»Р»Р°, СЃР±РёС‚Р°СЏ СЃ С‚РѕР»РєСѓ. вЂ” РЇ РґСѓРјР°Р», С‚С‹ СЃРµР№С‡Р°СЃ РЅР° С„РёР·РєСѓР»СЊС‚СѓСЂРµ?
 
-— Была, — ответила Она. «Урок закончился рано, так как это первый день, и я хотел догнать вас!»
+вЂ” Р‘С‹Р»Р°, вЂ” РѕС‚РІРµС‚РёР»Р° РћРЅР°. В«РЈСЂРѕРє Р·Р°РєРѕРЅС‡РёР»СЃСЏ СЂР°РЅРѕ, С‚Р°Рє РєР°Рє СЌС‚Рѕ РїРµСЂРІС‹Р№ РґРµРЅСЊ, Рё СЏ С…РѕС‚РµР» РґРѕРіРЅР°С‚СЊ РІР°СЃ!В»
 
-— Но сначала, — продолжила Лиза, — мне так надо в туалет. Пойдём со мной?»
+вЂ” РќРѕ СЃРЅР°С‡Р°Р»Р°, вЂ” РїСЂРѕРґРѕР»Р¶РёР»Р° Р›РёР·Р°, вЂ” РјРЅРµ С‚Р°Рє РЅР°РґРѕ РІ С‚СѓР°Р»РµС‚. РџРѕР№РґС‘Рј СЃРѕ РјРЅРѕР№?В»
 
-«Что? Нет!» Белла ответила. — Ты же знаешь, что сегодня у меня нет пропусков в туалет.
+В«Р§С‚Рѕ? РќРµС‚!В» Р‘РµР»Р»Р° РѕС‚РІРµС‚РёР»Р°. вЂ” РўС‹ Р¶Рµ Р·РЅР°РµС€СЊ, С‡С‚Рѕ СЃРµРіРѕРґРЅСЏ Сѓ РјРµРЅСЏ РЅРµС‚ РїСЂРѕРїСѓСЃРєРѕРІ РІ С‚СѓР°Р»РµС‚.
 
-«Я знаю, но между занятиями так мало времени», — убеждала Лиза. «Что ты собираешься делать, неловко стоять снаружи? Просто пойдём со мной.
+В«РЇ Р·РЅР°СЋ, РЅРѕ РјРµР¶РґСѓ Р·Р°РЅСЏС‚РёСЏРјРё С‚Р°Рє РјР°Р»Рѕ РІСЂРµРјРµРЅРёВ», вЂ” СѓР±РµР¶РґР°Р»Р° Р›РёР·Р°. В«Р§С‚Рѕ С‚С‹ СЃРѕР±РёСЂР°РµС€СЊСЃСЏ РґРµР»Р°С‚СЊ, РЅРµР»РѕРІРєРѕ СЃС‚РѕСЏС‚СЊ СЃРЅР°СЂСѓР¶Рё? РџСЂРѕСЃС‚Рѕ РїРѕР№РґС‘Рј СЃРѕ РјРЅРѕР№.
 
-«Ты не единственный, кто должен ходить в в*нную», — ответила Белла. — Только я не могу.
+В«РўС‹ РЅРµ РµРґРёРЅСЃС‚РІРµРЅРЅС‹Р№, РєС‚Рѕ РґРѕР»Р¶РµРЅ С…РѕРґРёС‚СЊ РІ РІ*РЅРЅСѓСЋВ», вЂ” РѕС‚РІРµС‚РёР»Р° Р‘РµР»Р»Р°. вЂ” РўРѕР»СЊРєРѕ СЏ РЅРµ РјРѕРіСѓ.
 
-«Пожалуйста?» Лиза попыталась ещё раз.
+В«РџРѕР¶Р°Р»СѓР№СЃС‚Р°?В» Р›РёР·Р° РїРѕРїС‹С‚Р°Р»Р°СЃСЊ РµС‰С‘ СЂР°Р·.
 
-«Угу, хорошо», — сдалась Белла. — Но ты должен быть быстрым. Я не могу быть там долго».
+В«РЈРіСѓ, С…РѕСЂРѕС€РѕВ», вЂ” СЃРґР°Р»Р°СЃСЊ Р‘РµР»Р»Р°. вЂ” РќРѕ С‚С‹ РґРѕР»Р¶РµРЅ Р±С‹С‚СЊ Р±С‹СЃС‚СЂС‹Рј. РЇ РЅРµ РјРѕРіСѓ Р±С‹С‚СЊ С‚Р°Рј РґРѕР»РіРѕВ».
 
-«Идеальный!» — взволнованно сказала Лиза и направилась к туалету, Белла неохотно следовала за ней.
+В«РРґРµР°Р»СЊРЅС‹Р№!В» вЂ” РІР·РІРѕР»РЅРѕРІР°РЅРЅРѕ СЃРєР°Р·Р°Р»Р° Р›РёР·Р° Рё РЅР°РїСЂР°РІРёР»Р°СЃСЊ Рє С‚СѓР°Р»РµС‚Сѓ, Р‘РµР»Р»Р° РЅРµРѕС…РѕС‚РЅРѕ СЃР»РµРґРѕРІР°Р»Р° Р·Р° РЅРµР№.
 
-«Итак, сегодня утром на алгебре я разговаривала с Синди, которая близка с братом Хизер», — начала Лиза, когда они с Беллой вошли в женский туалет. «И он сказал ей, что в этом семестре у Хизер есть только 3 посещения туалета в неделю».
+В«РС‚Р°Рє, СЃРµРіРѕРґРЅСЏ СѓС‚СЂРѕРј РЅР° Р°Р»РіРµР±СЂРµ СЏ СЂР°Р·РіРѕРІР°СЂРёРІР°Р»Р° СЃ РЎРёРЅРґРё, РєРѕС‚РѕСЂР°СЏ Р±Р»РёР·РєР° СЃ Р±СЂР°С‚РѕРј РҐРёР·РµСЂВ», вЂ” РЅР°С‡Р°Р»Р° Р›РёР·Р°, РєРѕРіРґР° РѕРЅРё СЃ Р‘РµР»Р»РѕР№ РІРѕС€Р»Рё РІ Р¶РµРЅСЃРєРёР№ С‚СѓР°Р»РµС‚. В«Р РѕРЅ СЃРєР°Р·Р°Р» РµР№, С‡С‚Рѕ РІ СЌС‚РѕРј СЃРµРјРµСЃС‚СЂРµ Сѓ РҐРёР·РµСЂ РµСЃС‚СЊ С‚РѕР»СЊРєРѕ 3 РїРѕСЃРµС‰РµРЅРёСЏ С‚СѓР°Р»РµС‚Р° РІ РЅРµРґРµР»СЋВ».
 
-Лиза вошла в стойло, и Белла могла слышать, как Лиза очень быстро начала опорожнять мочевой пузырь.
+Р›РёР·Р° РІРѕС€Р»Р° РІ СЃС‚РѕР№Р»Рѕ, Рё Р‘РµР»Р»Р° РјРѕРіР»Р° СЃР»С‹С€Р°С‚СЊ, РєР°Рє Р›РёР·Р° РѕС‡РµРЅСЊ Р±С‹СЃС‚СЂРѕ РЅР°С‡Р°Р»Р° РѕРїРѕСЂРѕР¶РЅСЏС‚СЊ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ.
 
-3! Ты представляешь, Белла? Это ужасно!»
+3! РўС‹ РїСЂРµРґСЃС‚Р°РІР»СЏРµС€СЊ, Р‘РµР»Р»Р°? Р­С‚Рѕ СѓР¶Р°СЃРЅРѕ!В»
 
-«Да… Ужасно», — тонко согласилась Белла, отвлечённая своим окружением.
+В«Р”Р°вЂ¦ РЈР¶Р°СЃРЅРѕВ», вЂ” С‚РѕРЅРєРѕ СЃРѕРіР»Р°СЃРёР»Р°СЃСЊ Р‘РµР»Р»Р°, РѕС‚РІР»РµС‡С‘РЅРЅР°СЏ СЃРІРѕРёРј РѕРєСЂСѓР¶РµРЅРёРµРј.
 
-Мало того, что Лиза счастливо мочилась, другой студент или профессор был в другой кабинке, также справлял нужду. Ещё одна ученица стояла у раковины и мыла руки.
+РњР°Р»Рѕ С‚РѕРіРѕ, С‡С‚Рѕ Р›РёР·Р° СЃС‡Р°СЃС‚Р»РёРІРѕ РјРѕС‡РёР»Р°СЃСЊ, РґСЂСѓРіРѕР№ СЃС‚СѓРґРµРЅС‚ РёР»Рё РїСЂРѕС„РµСЃСЃРѕСЂ Р±С‹Р» РІ РґСЂСѓРіРѕР№ РєР°Р±РёРЅРєРµ, С‚Р°РєР¶Рµ СЃРїСЂР°РІР»СЏР» РЅСѓР¶РґСѓ. Р•С‰С‘ РѕРґРЅР° СѓС‡РµРЅРёС†Р° СЃС‚РѕСЏР»Р° Сѓ СЂР°РєРѕРІРёРЅС‹ Рё РјС‹Р»Р° СЂСѓРєРё.
 
-— Я не могу… — захныкала Белла.
+вЂ” РЇ РЅРµ РјРѕРіСѓвЂ¦ вЂ” Р·Р°С…РЅС‹РєР°Р»Р° Р‘РµР»Р»Р°.
 
-— Что это, Белла? — спросила Лиза, всё ещё писая.
+вЂ” Р§С‚Рѕ СЌС‚Рѕ, Р‘РµР»Р»Р°? вЂ” СЃРїСЂРѕСЃРёР»Р° Р›РёР·Р°, РІСЃС‘ РµС‰С‘ РїРёСЃР°СЏ.
 
-«Мне нужно выбраться отсюда», — ответила Белла, выходя из в*нной, оставив Лизу, другую женщину писающей и всю стекающую воду.
+В«РњРЅРµ РЅСѓР¶РЅРѕ РІС‹Р±СЂР°С‚СЊСЃСЏ РѕС‚СЃСЋРґР°В», вЂ” РѕС‚РІРµС‚РёР»Р° Р‘РµР»Р»Р°, РІС‹С…РѕРґСЏ РёР· РІ*РЅРЅРѕР№, РѕСЃС‚Р°РІРёРІ Р›РёР·Сѓ, РґСЂСѓРіСѓСЋ Р¶РµРЅС‰РёРЅСѓ РїРёСЃР°СЋС‰РµР№ Рё РІСЃСЋ СЃС‚РµРєР°СЋС‰СѓСЋ РІРѕРґСѓ.
 
 *007*2023-05-17 00:26
 
-«Физика 371 — это не уровень для начинающих», — вовремя начал инструктор доктор Вельф.
+В«Р¤РёР·РёРєР° 371 вЂ” СЌС‚Рѕ РЅРµ СѓСЂРѕРІРµРЅСЊ РґР»СЏ РЅР°С‡РёРЅР°СЋС‰РёС…В», вЂ” РІРѕРІСЂРµРјСЏ РЅР°С‡Р°Р» РёРЅСЃС‚СЂСѓРєС‚РѕСЂ РґРѕРєС‚РѕСЂ Р’РµР»СЊС„.
 
-«От этого курса возлагаются большие надежды и высокие ставки», — продолжила она. «Если вы преуспеете, вы будете вознаграждены значительным преимуществом для физики 400 или выше».
+В«РћС‚ СЌС‚РѕРіРѕ РєСѓСЂСЃР° РІРѕР·Р»Р°РіР°СЋС‚СЃСЏ Р±РѕР»СЊС€РёРµ РЅР°РґРµР¶РґС‹ Рё РІС‹СЃРѕРєРёРµ СЃС‚Р°РІРєРёВ», вЂ” РїСЂРѕРґРѕР»Р¶РёР»Р° РѕРЅР°. В«Р•СЃР»Рё РІС‹ РїСЂРµСѓСЃРїРµРµС‚Рµ, РІС‹ Р±СѓРґРµС‚Рµ РІРѕР·РЅР°РіСЂР°Р¶РґРµРЅС‹ Р·РЅР°С‡РёС‚РµР»СЊРЅС‹Рј РїСЂРµРёРјСѓС‰РµСЃС‚РІРѕРј РґР»СЏ С„РёР·РёРєРё 400 РёР»Рё РІС‹С€РµВ».
 
-Окончательно. Что-то, во что Белла могла бы вонзить свои зубы, и ей не нужно было сосредотачиваться на своём мочевом пузыре.
+РћРєРѕРЅС‡Р°С‚РµР»СЊРЅРѕ. Р§С‚Рѕ-С‚Рѕ, РІРѕ С‡С‚Рѕ Р‘РµР»Р»Р° РјРѕРіР»Р° Р±С‹ РІРѕРЅР·РёС‚СЊ СЃРІРѕРё Р·СѓР±С‹, Рё РµР№ РЅРµ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ СЃРѕСЃСЂРµРґРѕС‚Р°С‡РёРІР°С‚СЊСЃСЏ РЅР° СЃРІРѕС‘Рј РјРѕС‡РµРІРѕРј РїСѓР·С‹СЂРµ.
 
-«Большую часть этого курса мы сосредоточимся на сложных концепциях движения жидкостей», — продолжил доктор Велф.
+В«Р‘РѕР»СЊС€СѓСЋ С‡Р°СЃС‚СЊ СЌС‚РѕРіРѕ РєСѓСЂСЃР° РјС‹ СЃРѕСЃСЂРµРґРѕС‚РѕС‡РёРјСЃСЏ РЅР° СЃР»РѕР¶РЅС‹С… РєРѕРЅС†РµРїС†РёСЏС… РґРІРёР¶РµРЅРёСЏ Р¶РёРґРєРѕСЃС‚РµР№В», вЂ” РїСЂРѕРґРѕР»Р¶РёР» РґРѕРєС‚РѕСЂ Р’РµР»С„.
 
-Чего ждать?
+Р§РµРіРѕ Р¶РґР°С‚СЊ?
 
-«Для начала мы рассмотрим концепции течения воды в природе. Быстрый против медленного потока…»
+В«Р”Р»СЏ РЅР°С‡Р°Р»Р° РјС‹ СЂР°СЃСЃРјРѕС‚СЂРёРј РєРѕРЅС†РµРїС†РёРё С‚РµС‡РµРЅРёСЏ РІРѕРґС‹ РІ РїСЂРёСЂРѕРґРµ. Р‘С‹СЃС‚СЂС‹Р№ РїСЂРѕС‚РёРІ РјРµРґР»РµРЅРЅРѕРіРѕ РїРѕС‚РѕРєР°вЂ¦В»
 
-Пожалуйста, прекратите произносить слово «поток».
+РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїСЂРµРєСЂР°С‚РёС‚Рµ РїСЂРѕРёР·РЅРѕСЃРёС‚СЊ СЃР»РѕРІРѕ В«РїРѕС‚РѕРєВ».
 
-«… Мы перейдём к водному потоку, изменённому людьми, таким как плотины, как к невероятным силам, связанным с контролем и сдерживанием воды…»
+В«вЂ¦ РњС‹ РїРµСЂРµР№РґС‘Рј Рє РІРѕРґРЅРѕРјСѓ РїРѕС‚РѕРєСѓ, РёР·РјРµРЅС‘РЅРЅРѕРјСѓ Р»СЋРґСЊРјРё, С‚Р°РєРёРј РєР°Рє РїР»РѕС‚РёРЅС‹, РєР°Рє Рє РЅРµРІРµСЂРѕСЏС‚РЅС‹Рј СЃРёР»Р°Рј, СЃРІСЏР·Р°РЅРЅС‹Рј СЃ РєРѕРЅС‚СЂРѕР»РµРј Рё СЃРґРµСЂР¶РёРІР°РЅРёРµРј РІРѕРґС‹вЂ¦В»
 
-Я не могу этого сделать. Этого не может быть на самом деле.
+РЇ РЅРµ РјРѕРіСѓ СЌС‚РѕРіРѕ СЃРґРµР»Р°С‚СЊ. Р­С‚РѕРіРѕ РЅРµ РјРѕР¶РµС‚ Р±С‹С‚СЊ РЅР° СЃР°РјРѕРј РґРµР»Рµ.
 
-«… Примерно в середине семестра мы углубимся в полностью изменённые человеком потоки воды, такие как колодцы и, что наиболее известно, или я должен сказать печально известно, внутреннюю сантехнику и, в частности, туалеты…»
+В«вЂ¦ РџСЂРёРјРµСЂРЅРѕ РІ СЃРµСЂРµРґРёРЅРµ СЃРµРјРµСЃС‚СЂР° РјС‹ СѓРіР»СѓР±РёРјСЃСЏ РІ РїРѕР»РЅРѕСЃС‚СЊСЋ РёР·РјРµРЅС‘РЅРЅС‹Рµ С‡РµР»РѕРІРµРєРѕРј РїРѕС‚РѕРєРё РІРѕРґС‹, С‚Р°РєРёРµ РєР°Рє РєРѕР»РѕРґС†С‹ Рё, С‡С‚Рѕ РЅР°РёР±РѕР»РµРµ РёР·РІРµСЃС‚РЅРѕ, РёР»Рё СЏ РґРѕР»Р¶РµРЅ СЃРєР°Р·Р°С‚СЊ РїРµС‡Р°Р»СЊРЅРѕ РёР·РІРµСЃС‚РЅРѕ, РІРЅСѓС‚СЂРµРЅРЅСЋСЋ СЃР°РЅС‚РµС…РЅРёРєСѓ Рё, РІ С‡Р°СЃС‚РЅРѕСЃС‚Рё, С‚СѓР°Р»РµС‚С‹вЂ¦В»
 
-Рука студента, стоящего рядом с Беллой, тут же поднялась. «Доктор. Вельф, я бы хотел воспользоваться пропуском в туалет.
+Р СѓРєР° СЃС‚СѓРґРµРЅС‚Р°, СЃС‚РѕСЏС‰РµРіРѕ СЂСЏРґРѕРј СЃ Р‘РµР»Р»РѕР№, С‚СѓС‚ Р¶Рµ РїРѕРґРЅСЏР»Р°СЃСЊ. В«Р”РѕРєС‚РѕСЂ. Р’РµР»СЊС„, СЏ Р±С‹ С…РѕС‚РµР» РІРѕСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ РїСЂРѕРїСѓСЃРєРѕРј РІ С‚СѓР°Р»РµС‚.
 
-— Нет проблем, давай, — едва подумав, ответила она.
+вЂ” РќРµС‚ РїСЂРѕР±Р»РµРј, РґР°РІР°Р№, вЂ” РµРґРІР° РїРѕРґСѓРјР°РІ, РѕС‚РІРµС‚РёР»Р° РѕРЅР°.
 
-Белла, с другой стороны, была переполнена и не могла перестать думать о том, как сильно ей нужно было попис*ть.
+Р‘РµР»Р»Р°, СЃ РґСЂСѓРіРѕР№ СЃС‚РѕСЂРѕРЅС‹, Р±С‹Р»Р° РїРµСЂРµРїРѕР»РЅРµРЅР° Рё РЅРµ РјРѕРіР»Р° РїРµСЂРµСЃС‚Р°С‚СЊ РґСѓРјР°С‚СЊ Рѕ С‚РѕРј, РєР°Рє СЃРёР»СЊРЅРѕ РµР№ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ РїРѕРїРёСЃ*С‚СЊ.
 
 *008*2023-05-27 01:30
 
-«Лиза!» — крикнула Белла из коридора между уроками.
+В«Р›РёР·Р°!В» вЂ” РєСЂРёРєРЅСѓР»Р° Р‘РµР»Р»Р° РёР· РєРѕСЂРёРґРѕСЂР° РјРµР¶РґСѓ СѓСЂРѕРєР°РјРё.
 
-«Мы должны идти домой. Пожалуйста, отвези меня домой, — попросила она более тонко.
+В«РњС‹ РґРѕР»Р¶РЅС‹ РёРґС‚Рё РґРѕРјРѕР№. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РѕС‚РІРµР·Рё РјРµРЅСЏ РґРѕРјРѕР№, вЂ” РїРѕРїСЂРѕСЃРёР»Р° РѕРЅР° Р±РѕР»РµРµ С‚РѕРЅРєРѕ.
 
-«Что? Нет почему? В чём дело?» — быстро спросила Лиза.
+В«Р§С‚Рѕ? РќРµС‚ РїРѕС‡РµРјСѓ? Р’ С‡С‘Рј РґРµР»Рѕ?В» вЂ” Р±С‹СЃС‚СЂРѕ СЃРїСЂРѕСЃРёР»Р° Р›РёР·Р°.
 
-«Мне очень нужно в в*нную», — ответила Белла, гораздо мягче, но всё так же настойчиво и целеустремлённо.
+В«РњРЅРµ РѕС‡РµРЅСЊ РЅСѓР¶РЅРѕ РІ РІ*РЅРЅСѓСЋВ», вЂ” РѕС‚РІРµС‚РёР»Р° Р‘РµР»Р»Р°, РіРѕСЂР°Р·РґРѕ РјСЏРіС‡Рµ, РЅРѕ РІСЃС‘ С‚Р°Рє Р¶Рµ РЅР°СЃС‚РѕР№С‡РёРІРѕ Рё С†РµР»РµСѓСЃС‚СЂРµРјР»С‘РЅРЅРѕ.
 
-«Вот и всё?» Лиза усмехнулась. «Я беспокоился, что это что-то важное или очень плохое. Я уже знаю, что тебе нужно попис*ть. Ты бросил меня, когда я уходил, помнишь?
+В«Р’РѕС‚ Рё РІСЃС‘?В» Р›РёР·Р° СѓСЃРјРµС…РЅСѓР»Р°СЃСЊ. В«РЇ Р±РµСЃРїРѕРєРѕРёР»СЃСЏ, С‡С‚Рѕ СЌС‚Рѕ С‡С‚Рѕ-С‚Рѕ РІР°Р¶РЅРѕРµ РёР»Рё РѕС‡РµРЅСЊ РїР»РѕС…РѕРµ. РЇ СѓР¶Рµ Р·РЅР°СЋ, С‡С‚Рѕ С‚РµР±Рµ РЅСѓР¶РЅРѕ РїРѕРїРёСЃ*С‚СЊ. РўС‹ Р±СЂРѕСЃРёР» РјРµРЅСЏ, РєРѕРіРґР° СЏ СѓС…РѕРґРёР», РїРѕРјРЅРёС€СЊ?
 
-«Лиза, ты не понимаешь», Белла изо всех сил пыталась объяснить. «Мне нужно попис*ть так, ОЧЕНЬ сильно. Пожалуйста, мне буквально нужно идти домой. Я даже не могу подумать, что мне нужно так сильно мочиться».
+В«Р›РёР·Р°, С‚С‹ РЅРµ РїРѕРЅРёРјР°РµС€СЊВ», Р‘РµР»Р»Р° РёР·Рѕ РІСЃРµС… СЃРёР» РїС‹С‚Р°Р»Р°СЃСЊ РѕР±СЉСЏСЃРЅРёС‚СЊ. В«РњРЅРµ РЅСѓР¶РЅРѕ РїРѕРїРёСЃ*С‚СЊ С‚Р°Рє, РћР§Р•РќР¬ СЃРёР»СЊРЅРѕ. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РјРЅРµ Р±СѓРєРІР°Р»СЊРЅРѕ РЅСѓР¶РЅРѕ РёРґС‚Рё РґРѕРјРѕР№. РЇ РґР°Р¶Рµ РЅРµ РјРѕРіСѓ РїРѕРґСѓРјР°С‚СЊ, С‡С‚Рѕ РјРЅРµ РЅСѓР¶РЅРѕ С‚Р°Рє СЃРёР»СЊРЅРѕ РјРѕС‡РёС‚СЊСЃСЏВ».
 
-Бел. Я знаю, что в этом семестре у них было мало пропусков в туалет. Я имею в виду, посмотри на меня, — возразила Лиза. — Но ты действительно должен использовать один из своих. Ты выглядишь таким неудобным.
+Р‘РµР». РЇ Р·РЅР°СЋ, С‡С‚Рѕ РІ СЌС‚РѕРј СЃРµРјРµСЃС‚СЂРµ Сѓ РЅРёС… Р±С‹Р»Рѕ РјР°Р»Рѕ РїСЂРѕРїСѓСЃРєРѕРІ РІ С‚СѓР°Р»РµС‚. РЇ РёРјРµСЋ РІ РІРёРґСѓ, РїРѕСЃРјРѕС‚СЂРё РЅР° РјРµРЅСЏ, вЂ” РІРѕР·СЂР°Р·РёР»Р° Р›РёР·Р°. вЂ” РќРѕ С‚С‹ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РґРѕР»Р¶РµРЅ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РѕРґРёРЅ РёР· СЃРІРѕРёС…. РўС‹ РІС‹РіР»СЏРґРёС€СЊ С‚Р°РєРёРј РЅРµСѓРґРѕР±РЅС‹Рј.
 
-Белла вздохнула. — У меня их нет.
+Р‘РµР»Р»Р° РІР·РґРѕС…РЅСѓР»Р°. вЂ” РЈ РјРµРЅСЏ РёС… РЅРµС‚.
 
-— Я знаю, — подтвердила Лиза. — Ты сказал, что сегодня у тебя их нет. Но Бел, ты ёрзаешь, не можешь стоять на месте. Может быть, использовать один из другого дня на этой неделе, и тогда мы сможем придумать план на этот день?
+вЂ” РЇ Р·РЅР°СЋ, вЂ” РїРѕРґС‚РІРµСЂРґРёР»Р° Р›РёР·Р°. вЂ” РўС‹ СЃРєР°Р·Р°Р», С‡С‚Рѕ СЃРµРіРѕРґРЅСЏ Сѓ С‚РµР±СЏ РёС… РЅРµС‚. РќРѕ Р‘РµР», С‚С‹ С‘СЂР·Р°РµС€СЊ, РЅРµ РјРѕР¶РµС€СЊ СЃС‚РѕСЏС‚СЊ РЅР° РјРµСЃС‚Рµ. РњРѕР¶РµС‚ Р±С‹С‚СЊ, РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РѕРґРёРЅ РёР· РґСЂСѓРіРѕРіРѕ РґРЅСЏ РЅР° СЌС‚РѕР№ РЅРµРґРµР»Рµ, Рё С‚РѕРіРґР° РјС‹ СЃРјРѕР¶РµРј РїСЂРёРґСѓРјР°С‚СЊ РїР»Р°РЅ РЅР° СЌС‚РѕС‚ РґРµРЅСЊ?
 
-«Лиза», — попыталась Белла в последний раз. «У меня нет НИКАКИХ пропусков в туалет. Не сегодня, не на этой неделе… У меня нет пропусков в туалет на семестр».
+В«Р›РёР·Р°В», вЂ” РїРѕРїС‹С‚Р°Р»Р°СЃСЊ Р‘РµР»Р»Р° РІ РїРѕСЃР»РµРґРЅРёР№ СЂР°Р·. В«РЈ РјРµРЅСЏ РЅРµС‚ РќРРљРђРљРРҐ РїСЂРѕРїСѓСЃРєРѕРІ РІ С‚СѓР°Р»РµС‚. РќРµ СЃРµРіРѕРґРЅСЏ, РЅРµ РЅР° СЌС‚РѕР№ РЅРµРґРµР»РµвЂ¦ РЈ РјРµРЅСЏ РЅРµС‚ РїСЂРѕРїСѓСЃРєРѕРІ РІ С‚СѓР°Р»РµС‚ РЅР° СЃРµРјРµСЃС‚СЂВ».
 
-«Что? Нет, они этого не сделают, — снова сказала Лиза с недоверием.
+В«Р§С‚Рѕ? РќРµС‚, РѕРЅРё СЌС‚РѕРіРѕ РЅРµ СЃРґРµР»Р°СЋС‚, вЂ” СЃРЅРѕРІР° СЃРєР°Р·Р°Р»Р° Р›РёР·Р° СЃ РЅРµРґРѕРІРµСЂРёРµРј.
 
-«Они сделали, я нет. Сейчас, пожалуйста? Можешь отвезти меня домой, чтобы мне не пришлось мочиться?
+В«РћРЅРё СЃРґРµР»Р°Р»Рё, СЏ РЅРµС‚. РЎРµР№С‡Р°СЃ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°? РњРѕР¶РµС€СЊ РѕС‚РІРµР·С‚Рё РјРµРЅСЏ РґРѕРјРѕР№, С‡С‚РѕР±С‹ РјРЅРµ РЅРµ РїСЂРёС€Р»РѕСЃСЊ РјРѕС‡РёС‚СЊСЃСЏ?
 
-— О, Белла, — предложила Лиза, наконец осознав серьёзность затруднительного положения своей соседки по комнате. «Мне очень жаль. Я не могу, хотя. Мой самый сложный урок - последний урок дня. Я не могу пропустить ничего из этого».
+вЂ” Рћ, Р‘РµР»Р»Р°, вЂ” РїСЂРµРґР»РѕР¶РёР»Р° Р›РёР·Р°, РЅР°РєРѕРЅРµС† РѕСЃРѕР·РЅР°РІ СЃРµСЂСЊС‘Р·РЅРѕСЃС‚СЊ Р·Р°С‚СЂСѓРґРЅРёС‚РµР»СЊРЅРѕРіРѕ РїРѕР»РѕР¶РµРЅРёСЏ СЃРІРѕРµР№ СЃРѕСЃРµРґРєРё РїРѕ РєРѕРјРЅР°С‚Рµ. В«РњРЅРµ РѕС‡РµРЅСЊ Р¶Р°Р»СЊ. РЇ РЅРµ РјРѕРіСѓ, С…РѕС‚СЏ. РњРѕР№ СЃР°РјС‹Р№ СЃР»РѕР¶РЅС‹Р№ СѓСЂРѕРє - РїРѕСЃР»РµРґРЅРёР№ СѓСЂРѕРє РґРЅСЏ. РЇ РЅРµ РјРѕРіСѓ РїСЂРѕРїСѓСЃС‚РёС‚СЊ РЅРёС‡РµРіРѕ РёР· СЌС‚РѕРіРѕВ».
 
-«Послушай», — продолжила Лиза, пытаясь найти светлую сторону, чтобы поддержать Беллу. «У тебя есть спортзал для последнего занятия. Вероятно, это будет что-то лёгкое, и вы сможете передвигаться, не привлекая внимания, и сможете отвлечься от себя. Я обещаю, что отвезу нас обратно, как только окончится второй курс, и отвезу тебя домой. Только держать надо для чего? Может быть, ещё час. Белла, я верю в тебя.
+В«РџРѕСЃР»СѓС€Р°Р№В», вЂ” РїСЂРѕРґРѕР»Р¶РёР»Р° Р›РёР·Р°, РїС‹С‚Р°СЏСЃСЊ РЅР°Р№С‚Рё СЃРІРµС‚Р»СѓСЋ СЃС‚РѕСЂРѕРЅСѓ, С‡С‚РѕР±С‹ РїРѕРґРґРµСЂР¶Р°С‚СЊ Р‘РµР»Р»Сѓ. В«РЈ С‚РµР±СЏ РµСЃС‚СЊ СЃРїРѕСЂС‚Р·Р°Р» РґР»СЏ РїРѕСЃР»РµРґРЅРµРіРѕ Р·Р°РЅСЏС‚РёСЏ. Р’РµСЂРѕСЏС‚РЅРѕ, СЌС‚Рѕ Р±СѓРґРµС‚ С‡С‚Рѕ-С‚Рѕ Р»С‘РіРєРѕРµ, Рё РІС‹ СЃРјРѕР¶РµС‚Рµ РїРµСЂРµРґРІРёРіР°С‚СЊСЃСЏ, РЅРµ РїСЂРёРІР»РµРєР°СЏ РІРЅРёРјР°РЅРёСЏ, Рё СЃРјРѕР¶РµС‚Рµ РѕС‚РІР»РµС‡СЊСЃСЏ РѕС‚ СЃРµР±СЏ. РЇ РѕР±РµС‰Р°СЋ, С‡С‚Рѕ РѕС‚РІРµР·Сѓ РЅР°СЃ РѕР±СЂР°С‚РЅРѕ, РєР°Рє С‚РѕР»СЊРєРѕ РѕРєРѕРЅС‡РёС‚СЃСЏ РІС‚РѕСЂРѕР№ РєСѓСЂСЃ, Рё РѕС‚РІРµР·Сѓ С‚РµР±СЏ РґРѕРјРѕР№. РўРѕР»СЊРєРѕ РґРµСЂР¶Р°С‚СЊ РЅР°РґРѕ РґР»СЏ С‡РµРіРѕ? РњРѕР¶РµС‚ Р±С‹С‚СЊ, РµС‰С‘ С‡Р°СЃ. Р‘РµР»Р»Р°, СЏ РІРµСЂСЋ РІ С‚РµР±СЏ.
 
-«Лиза…» попыталась Белла, когда прозвенел звонок.
+В«Р›РёР·Р°вЂ¦В» РїРѕРїС‹С‚Р°Р»Р°СЃСЊ Р‘РµР»Р»Р°, РєРѕРіРґР° РїСЂРѕР·РІРµРЅРµР» Р·РІРѕРЅРѕРє.
 
-«Мне так жаль, Белла. Ты можешь сделать это, — сказала Лиза, направляясь к классу.
+В«РњРЅРµ С‚Р°Рє Р¶Р°Р»СЊ, Р‘РµР»Р»Р°. РўС‹ РјРѕР¶РµС€СЊ СЃРґРµР»Р°С‚СЊ СЌС‚Рѕ, вЂ” СЃРєР°Р·Р°Р»Р° Р›РёР·Р°, РЅР°РїСЂР°РІР»СЏСЏСЃСЊ Рє РєР»Р°СЃСЃСѓ.
 
-Белла осталась без выбора. Она отправилась на урок физкультуры, мечтая вернуться домой, чтобы наконец-то попис*ть.
+Р‘РµР»Р»Р° РѕСЃС‚Р°Р»Р°СЃСЊ Р±РµР· РІС‹Р±РѕСЂР°. РћРЅР° РѕС‚РїСЂР°РІРёР»Р°СЃСЊ РЅР° СѓСЂРѕРє С„РёР·РєСѓР»СЊС‚СѓСЂС‹, РјРµС‡С‚Р°СЏ РІРµСЂРЅСѓС‚СЊСЃСЏ РґРѕРјРѕР№, С‡С‚РѕР±С‹ РЅР°РєРѕРЅРµС†-С‚Рѕ РїРѕРїРёСЃ*С‚СЊ.
 
